helm/tempo/jenkins-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
    external-dns/public: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: cluster-issuer-lets-encrypt-staging
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
    external-dns.alpha.kubernetes.io/hostname: jenkins.test.fkaj.com.
spec:
  tls:
    - secretName: certmanager-star-test-fkaj-com
      hosts:
        - "*.test.fkaj.com"
  rules:
    - host: jenkins.test.fkaj.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-jenkins
              servicePort: 80
